# pyweek_33

./: .gitignore  pyproject.toml
assets/: evil_rps.pyxres
src/: main.py
src/ui/: box.py  panel.py  typefaces.py
